--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,14 @@
     color: #7A7A7A;
 }
 
+.lightg-bg{
+    background: #7A7A7A;
+}
+
 .brown-c{
     color: #AE441D;
+}
+
+.bg-bl{
+    background: #202020;
 }
